Retire Servotronic and device CAN (workstream 3)
